--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,22 +2,26 @@ cmake_minimum_required(VERSION 3.14)
 
 project(mpqfs
     VERSION 0.1.0
-    DESCRIPTION "Minimal MPQ archive reader with SDL integration"
+    DESCRIPTION "Minimal MPQ v1 archive reader with SDL integration"
     LANGUAGES C
 )
 
-set(CMAKE_C_STANDARD 11)
+# Allow consumers to enable C++ compilation if they prefer.
+# By default we compile as C99 for maximum portability (PS2 ee-gcc, DJGPP, etc.)
+option(MPQFS_BUILD_TESTS    "Build test executables"                         ON)
+option(MPQFS_BUILD_SHARED   "Build as a shared library instead of static"    OFF)
+option(MPQFS_SDL_VERSION    "SDL version to build against (1, 2, 3, or AUTO)" "AUTO")
+
+# --- C standard ---
+# C99 is the baseline — it works on every toolchain DevilutionX targets,
+# including PS2 (ee-gcc), DJGPP (DOS), and Emscripten.
+set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
+set(CMAKE_C_EXTENSIONS OFF)
 
-# Options
-option(MPQFS_BUILD_TESTS "Build test executables" ON)
-option(MPQFS_SDL_VERSION "SDL version to build against (1, 2, 3, or AUTO)" "AUTO")
+# --- SDL detection ---
 
-# --- Dependencies ---
-
-# SDL detection
 if(MPQFS_SDL_VERSION STREQUAL "AUTO")
-    # Try SDL3 first, then SDL2, then SDL1
     find_package(SDL3 QUIET)
     if(SDL3_FOUND)
         set(_MPQFS_SDL_VER 3)
@@ -52,7 +56,7 @@ else()
     message(STATUS "mpqfs: SDL integration disabled")
 endif()
 
-# --- Library ---
+# --- Library target ---
 
 set(MPQFS_SOURCES
     src/mpq_archive.c
@@ -64,7 +68,16 @@ if(_MPQFS_SDL_VER GREATER 0)
     list(APPEND MPQFS_SOURCES src/mpq_sdl.c)
 endif()
 
-add_library(mpqfs ${MPQFS_SOURCES})
+if(MPQFS_BUILD_SHARED)
+    add_library(mpqfs SHARED ${MPQFS_SOURCES})
+    target_compile_definitions(mpqfs
+        PRIVATE MPQFS_BUILDING=1
+        PUBLIC  MPQFS_SHARED=1
+    )
+else()
+    add_library(mpqfs STATIC ${MPQFS_SOURCES})
+endif()
+
 add_library(mpqfs::mpqfs ALIAS mpqfs)
 
 target_include_directories(mpqfs
@@ -75,10 +88,10 @@ target_include_directories(mpqfs
         ${CMAKE_CURRENT_SOURCE_DIR}/src
 )
 
-
-
+# SDL version define (used internally by mpq_sdl.c)
 target_compile_definitions(mpqfs PRIVATE MPQFS_SDL_VERSION=${_MPQFS_SDL_VER})
 
+# SDL linkage
 if(_MPQFS_SDL_VER EQUAL 3)
     target_link_libraries(mpqfs PUBLIC SDL3::SDL3)
     target_compile_definitions(mpqfs PUBLIC MPQFS_USE_SDL3=1)
@@ -91,11 +104,22 @@ elseif(_MPQFS_SDL_VER EQUAL 1)
     target_compile_definitions(mpqfs PUBLIC MPQFS_USE_SDL1=1)
 endif()
 
-# Compiler warnings
+# --- Compiler warnings (platform-aware) ---
+
 if(CMAKE_C_COMPILER_ID MATCHES "GNU|Clang")
-    target_compile_options(mpqfs PRIVATE -Wall -Wextra -Wpedantic)
+    target_compile_options(mpqfs PRIVATE
+        -Wall -Wextra -Wpedantic
+        -Wconversion -Wsign-conversion
+        -Wno-unused-function        # static inline helpers in headers
+    )
+    # Ensure the library compiles cleanly as C++ when included by a C++ TU.
+    # This doesn't change the library's own language, just validates compat.
 elseif(MSVC)
-    target_compile_options(mpqfs PRIVATE /W4)
+    target_compile_options(mpqfs PRIVATE
+        /W4
+        /wd4100   # unreferenced formal parameter (same as -Wno-unused-parameter)
+        /wd4244   # possible loss of data (narrowing)
+    )
 endif()
 
 # --- Tests ---
@@ -104,11 +128,21 @@ if(MPQFS_BUILD_TESTS)
     add_executable(mpqfs_test tests/test_mpqfs.c)
     target_link_libraries(mpqfs_test PRIVATE mpqfs::mpqfs)
     target_include_directories(mpqfs_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
+
+    # Suppress warnings in test code that are intentional (e.g. sign conversion
+    # in the synthetic MPQ builder).
+    if(CMAKE_C_COMPILER_ID MATCHES "GNU|Clang")
+        target_compile_options(mpqfs_test PRIVATE
+            -Wall -Wextra
+            -Wno-sign-conversion -Wno-conversion
+        )
+    endif()
 endif()
 
 # --- Install ---
 
 include(GNUInstallDirs)
+include(CMakePackageConfigHelpers)
 
 install(TARGETS mpqfs
     EXPORT mpqfsTargets
@@ -124,5 +158,24 @@ install(DIRECTORY include/mpqfs
 install(EXPORT mpqfsTargets
     FILE mpqfsTargets.cmake
     NAMESPACE mpqfs::
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/mpqfs
+)
+
+# Generate mpqfsConfig.cmake so that find_package(mpqfs) works.
+configure_package_config_file(
+    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/mpqfsConfig.cmake.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/mpqfsConfig.cmake"
+    INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/mpqfs
+)
+
+write_basic_package_version_file(
+    "${CMAKE_CURRENT_BINARY_DIR}/mpqfsConfigVersion.cmake"
+    VERSION ${PROJECT_VERSION}
+    COMPATIBILITY SameMajorVersion
+)
+
+install(FILES
+    "${CMAKE_CURRENT_BINARY_DIR}/mpqfsConfig.cmake"
+    "${CMAKE_CURRENT_BINARY_DIR}/mpqfsConfigVersion.cmake"
     DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/mpqfs
 )
