Add MPQ write support
Diablo 1 also uses MPQ files for it save game format, this means that we
will need the lib to be able to write MPQ files, but it only needs this
in a very basic way as done by the original game as we need to stay
compatible with it's save format.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,7 @@ set(MPQFS_SOURCES
     src/mpq_archive.c
     src/mpq_crypto.c
     src/mpq_stream.c
+    src/mpq_writer.c
 )
 
 if(_MPQFS_SDL_VER GREATER 0)
