Implement features needed by DevilutionX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ find_package(BZip2 REQUIRED)
 set(MPQFS_SOURCES
     src/mpq_archive.c
     src/mpq_crypto.c
+    src/mpq_pkware.c
     src/mpq_stream.c
     src/mpq_writer.c
 )
