Skip find_package when targets already exist
When mpqfs is embedded via add_subdirectory or FetchContent, the parent
project may have already created ZLIB::ZLIB, BZip2::BZip2, and SDL
targets by building them from source rather than through find_package.

On platforms where system packages are unavailable (e.g. Amiga cross-
compilation), find_package would fail even though the targets are
perfectly usable.

Check for existing targets before calling find_package for:
- ZLIB::ZLIB and BZip2::BZip2
- SDL3::SDL3, SDL2::SDL2 / SDL2::SDL2-static (both AUTO and explicit)

Also handle SDL2::SDL2-static as a fallback when linking SDL2, since
some toolchains (e.g. vitasdk) only provide the static target.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,33 +20,50 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_C_EXTENSIONS OFF)
 
 # --- SDL detection ---
+#
+# When embedded via add_subdirectory / FetchContent the parent project may
+# have already created SDL targets without using find_package (e.g. by
+# building SDL from source).  We check for existing targets first so that
+# find_package is only called when necessary.
 
 if(MPQFS_SDL_VERSION STREQUAL "AUTO")
-    find_package(SDL3 QUIET)
-    if(SDL3_FOUND)
+    if(TARGET SDL3::SDL3)
         set(_MPQFS_SDL_VER 3)
-        message(STATUS "mpqfs: Found SDL3")
+        message(STATUS "mpqfs: Found SDL3 (target)")
+    elseif(TARGET SDL2::SDL2 OR TARGET SDL2::SDL2-static)
+        set(_MPQFS_SDL_VER 2)
+        message(STATUS "mpqfs: Found SDL2 (target)")
     else()
-        find_package(SDL2 QUIET)
-        if(SDL2_FOUND)
-            set(_MPQFS_SDL_VER 2)
-            message(STATUS "mpqfs: Found SDL2")
+        find_package(SDL3 QUIET)
+        if(SDL3_FOUND)
+            set(_MPQFS_SDL_VER 3)
+            message(STATUS "mpqfs: Found SDL3")
         else()
-            find_package(SDL QUIET)
-            if(SDL_FOUND)
-                set(_MPQFS_SDL_VER 1)
-                message(STATUS "mpqfs: Found SDL 1.2")
+            find_package(SDL2 QUIET)
+            if(SDL2_FOUND)
+                set(_MPQFS_SDL_VER 2)
+                message(STATUS "mpqfs: Found SDL2")
             else()
-                set(_MPQFS_SDL_VER 0)
-                message(STATUS "mpqfs: No SDL found, building without SDL integration")
+                find_package(SDL QUIET)
+                if(SDL_FOUND)
+                    set(_MPQFS_SDL_VER 1)
+                    message(STATUS "mpqfs: Found SDL 1.2")
+                else()
+                    set(_MPQFS_SDL_VER 0)
+                    message(STATUS "mpqfs: No SDL found, building without SDL integration")
+                endif()
             endif()
         endif()
     endif()
 elseif(MPQFS_SDL_VERSION STREQUAL "3")
-    find_package(SDL3 REQUIRED)
+    if(NOT TARGET SDL3::SDL3)
+        find_package(SDL3 REQUIRED)
+    endif()
     set(_MPQFS_SDL_VER 3)
 elseif(MPQFS_SDL_VERSION STREQUAL "2")
-    find_package(SDL2 REQUIRED)
+    if(NOT TARGET SDL2::SDL2 AND NOT TARGET SDL2::SDL2-static)
+        find_package(SDL2 REQUIRED)
+    endif()
     set(_MPQFS_SDL_VER 2)
 elseif(MPQFS_SDL_VERSION STREQUAL "1")
     find_package(SDL REQUIRED)
@@ -57,8 +74,12 @@ else()
 endif()
 
 # --- zlib and bzip2 (required for MPQ sector decompression) ---
-find_package(ZLIB REQUIRED)
-find_package(BZip2 REQUIRED)
+if(NOT TARGET ZLIB::ZLIB)
+    find_package(ZLIB REQUIRED)
+endif()
+if(NOT TARGET BZip2::BZip2)
+    find_package(BZip2 REQUIRED)
+endif()
 
 # --- Library target ---
 
@@ -105,7 +126,11 @@ if(_MPQFS_SDL_VER EQUAL 3)
     target_link_libraries(mpqfs PUBLIC SDL3::SDL3)
     target_compile_definitions(mpqfs PUBLIC MPQFS_USE_SDL3=1)
 elseif(_MPQFS_SDL_VER EQUAL 2)
-    target_link_libraries(mpqfs PUBLIC SDL2::SDL2)
+    if(TARGET SDL2::SDL2)
+        target_link_libraries(mpqfs PUBLIC SDL2::SDL2)
+    elseif(TARGET SDL2::SDL2-static)
+        target_link_libraries(mpqfs PUBLIC SDL2::SDL2-static)
+    endif()
     target_compile_definitions(mpqfs PUBLIC MPQFS_USE_SDL2=1)
 elseif(_MPQFS_SDL_VER EQUAL 1)
     target_include_directories(mpqfs PUBLIC ${SDL_INCLUDE_DIR})
