Skip install rules when embedded as a subdirectory
When mpqfs is included via add_subdirectory or FetchContent, the
install(EXPORT) rules fail if mpqfs's private dependencies (zlib,
bzip2) are also built from source within the parent project — CMake
requires all targets referenced by an export set to be in an export
set themselves.

Guard the entire install block with a top-level project check so
that install rules are only generated when mpqfs is built standalone.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -174,6 +174,13 @@ if(MPQFS_BUILD_TESTS)
 endif()
 
 # --- Install ---
+#
+# Install rules are only useful when mpqfs is the top-level project.
+# When embedded via add_subdirectory / FetchContent, the install export
+# would fail if mpqfs's private dependencies (zlib, bzip2, SDL) are
+# also built from source and not part of any export set.
+
+if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
 
 include(GNUInstallDirs)
 include(CMakePackageConfigHelpers)
@@ -213,3 +220,5 @@ install(FILES
     "${CMAKE_CURRENT_BINARY_DIR}/mpqfsConfigVersion.cmake"
     DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/mpqfs
 )
+
+endif()
