Make zlib/bzip2 optional; cache comp_buf in stream
Performance and portability improvements:

1. Make zlib and bzip2 optional (MPQFS_USE_ZLIB, MPQFS_USE_BZIP2 CMake options)

   Diablo 1 / Hellfire MPQ files only use PKWARE DCL implode, which is
   always built in.  zlib/bzip2 are only needed for MPQ archives using
   the multi-method compression flag (MPQ_FILE_COMPRESS), common in
   Warcraft III / WoW but not Diablo.

   On platforms where zlib is unavailable (e.g. original Xbox / nxdk),
   consumers can set -DMPQFS_USE_ZLIB=OFF -DMPQFS_USE_BZIP2=OFF.  If an
   MPQ file requiring those methods is encountered at runtime, a clear
   error message is reported.

   Both options default to ON for full backward compatibility.

2. Cache the compressed-sector read buffer in mpq_stream_t

   Previously, mpq_stream_load_sector() called malloc/free for a
   temporary comp_buf on every compressed sector read.  For streaming
   audio (the primary SDL_RWops use case), this caused allocation churn
   during playback.

   The buffer is now a member of mpq_stream_t (comp_buf / comp_buf_cap),
   allocated on first use via realloc and grown as needed.  It is freed
   once when the stream is closed.  This matches the buffer-reuse
   strategy that libmpq used (tmp_buf_ member).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,12 +73,29 @@ else()
     message(STATUS "mpqfs: SDL integration disabled")
 endif()
 
-# --- zlib and bzip2 (required for MPQ sector decompression) ---
-if(NOT TARGET ZLIB::ZLIB)
-    find_package(ZLIB REQUIRED)
+# --- zlib and bzip2 (optional, for MPQ_FILE_COMPRESS sector decompression) ---
+#
+# Diablo 1 / Hellfire MPQ files only use PKWARE DCL implode (MPQ_FILE_IMPLODE),
+# which is always built in.  zlib and bzip2 are only needed for MPQ archives
+# that use the multi-method compression flag (MPQ_FILE_COMPRESS), which is
+# common in Warcraft III / WoW but not in Diablo.
+#
+# On platforms where zlib or bzip2 are unavailable (e.g. original Xbox / nxdk),
+# set MPQFS_USE_ZLIB=OFF and/or MPQFS_USE_BZIP2=OFF.  If an MPQ file using
+# those methods is encountered at runtime, a clear error is reported.
+
+option(MPQFS_USE_ZLIB  "Enable zlib decompression for MPQ_FILE_COMPRESS sectors"  ON)
+option(MPQFS_USE_BZIP2 "Enable bzip2 decompression for MPQ_FILE_COMPRESS sectors" ON)
+
+if(MPQFS_USE_ZLIB)
+    if(NOT TARGET ZLIB::ZLIB)
+        find_package(ZLIB REQUIRED)
+    endif()
 endif()
-if(NOT TARGET BZip2::BZip2)
-    find_package(BZip2 REQUIRED)
+if(MPQFS_USE_BZIP2)
+    if(NOT TARGET BZip2::BZip2)
+        find_package(BZip2 REQUIRED)
+    endif()
 endif()
 
 # --- Library target ---
@@ -118,13 +135,24 @@ target_include_directories(mpqfs
 # SDL version define (used internally by mpq_sdl.c)
 target_compile_definitions(mpqfs PRIVATE MPQFS_SDL_VERSION=${_MPQFS_SDL_VER})
 
-# zlib and bzip2 linkage
+# zlib and bzip2 linkage (when enabled)
 # When mpqfs is built as a static library (the default), consumers need
-# the transitive zlib/bzip2 dependency to resolve symbols at link time.
-if(MPQFS_BUILD_SHARED)
-    target_link_libraries(mpqfs PRIVATE ZLIB::ZLIB BZip2::BZip2)
-else()
-    target_link_libraries(mpqfs PUBLIC ZLIB::ZLIB BZip2::BZip2)
+# the transitive dependency to resolve symbols at link time.
+if(MPQFS_USE_ZLIB)
+    target_compile_definitions(mpqfs PUBLIC MPQFS_HAS_ZLIB=1)
+    if(MPQFS_BUILD_SHARED)
+        target_link_libraries(mpqfs PRIVATE ZLIB::ZLIB)
+    else()
+        target_link_libraries(mpqfs PUBLIC ZLIB::ZLIB)
+    endif()
+endif()
+if(MPQFS_USE_BZIP2)
+    target_compile_definitions(mpqfs PUBLIC MPQFS_HAS_BZIP2=1)
+    if(MPQFS_BUILD_SHARED)
+        target_link_libraries(mpqfs PRIVATE BZip2::BZip2)
+    else()
+        target_link_libraries(mpqfs PUBLIC BZip2::BZip2)
+    endif()
 endif()
 
 # SDL linkage
